[package]
name = "qol-rust-discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true

[dependencies]
chrono = "0.4.33"
poise = "0.6.1"
regex = "1.10.6"
rspotify = "0.13.3"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
